--- a/project-manager.html
+++ b/project-manager.html
@@ -41,10 +41,10 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/unispace/77129ef0-dc97-46bf-a48f-c891c9b63d06'>Unispace - Project Manager - Traveler</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/softbank/jobs/4501323002'>Job Application for Compliance Program Manager at SoftBank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/softbank/jobs/4501323002'>Job Application for Compliance Program Manager at SoftBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/chatmeter/e2cd52a3-833e-4f4c-96ac-2ea8c1685d14'>Chatmeter - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/chatmeter/e2cd52a3-833e-4f4c-96ac-2ea8c1685d14'>Chatmeter - Project Manager</a></h5> 
 <p><span class="badge badge-light">San Diego, CA  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -90,7 +90,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -198,7 +198,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coursera/457cda76-e950-4d64-aacd-bda9b8fc86e4'>Coursera - Events Program Manager (Contract)</a></h5> 
+<h5><a href='https://jobs.lever.co/coursera/457cda76-e950-4d64-aacd-bda9b8fc86e4'>Coursera - Events Program Manager (Contract)</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -242,7 +242,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/vangst/job/jjjussroh356bd3ku7thrcczry'>Marketing Project Manager  | Vangst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/vangst/job/jjjussroh356bd3ku7thrcczry'>Marketing Project Manager  | Vangst</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -264,7 +264,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Newark, NJNewark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -358,7 +358,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axa.referrals.selectminds.com/jobs/project-manager-finance-business-operations-5780'>Project Manager - Finance Business Operations - AXA | Careers</a></h5> 
+<h5><a href='https://axa.referrals.selectminds.com/jobs/project-manager-finance-business-operations-5780'>Project Manager - Finance Business Operations - AXA | Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -366,7 +366,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/2c7b9efe-3c4e-4d83-8555-45bbf36a9634'>Ironclad Technology Services - IT Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/ironcladts/2c7b9efe-3c4e-4d83-8555-45bbf36a9634'>Ironclad Technology Services - IT Program Manager</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -430,7 +430,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qCA9Vfw0&k=Job&j=oFTmbfwP&__jvst=Employee&__jvsd=sBvgWhw4&__jvsc=Twitter&bid=ntzrpMw9'>Miniclip Careers - Go-To-Market Project Manager</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -438,7 +438,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Broomfield, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://potentialpark.applytojob.com/apply/aHRLgwVLu3/Project-Manager-For-A-German-Pilot-Study'>Project Manager for a German pilot study - Potentialpark - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://potentialpark.applytojob.com/apply/aHRLgwVLu3/Project-Manager-For-A-German-Pilot-Study'>Project Manager for a German pilot study - Potentialpark - Career Page</a></h5> 
 <p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
